@@ -13,6 +13,9 @@ Noteworthy changes in version 2.0.0 (unreleased)
  * Interface changes relative to the 1.24 branch of gpgme:
  ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  DN::prettyAttributes                    NEW.
+ QuickJob::startCreate                   CHANGED: Changed argument types.
+                                                  Removed key argument.
+ QuickJob::startAddSubkey                CHANGED: Changed argument types.
 
 
 Noteworthy changes in earlier versions can be found in the NEWS file of
